--- a/src/pages/Service_section.css
+++ b/src/pages/Service_section.css
@@ -1,3 +1,26 @@
-.bg-custom-yellow {
-    background-color: rgba(252, 194, 21, 0.6);
+.bg-custom-yellow { 
+    background-color:rgba(252, 194, 21, 0.6);
   }
+  
+ 
+  .slick-prev.custom-arrow,
+  .slick-next.custom-arrow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgba(252, 194, 21, 0.6) !important; 
+    font-size: 20px; 
+    width: auto;
+    height: auto;
+    position: absolute;
+    z-index: 1000;
+    cursor: pointer;
+    transition: color 0.3s ease-in-out;
+  }
+  
+  .slick-prev.custom-arrow:hover,
+  .slick-next.custom-arrow:hover {
+    color: #555555 !important; 
+    
+  }
+  
