--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
-.slick-slide > div{
+.slick-slide > div {
     margin: 0 10px;
+}
+
+.slick-arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    z-index: 2; 
+}
+
+.slick-arrow svg {
+    stroke: #FCC21599; 
+    stroke-width: 3;
 }
